plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '11'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//db
	implementation 'mysql:mysql-connector-java'
	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'com.h2database:h2'

	//spring
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation ("org.springframework.security:spring-security-config:5.6.0")
	implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.3.1.RELEASE'
	implementation 'org.springframework.boot:spring-boot-starter-validation'


	//jwt
	implementation 'io.jsonwebtoken:jjwt:0.9.1'

	// Springdoc OpenAPI 의존성 추가
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.3'

	//java
	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.1'

	//etc
	implementation 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok:1.16.20'
	annotationProcessor 'org.projectlombok:lombok:1.18.20'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.mockito:mockito-core'
	compileOnly 'org.slf4j:slf4j-api:1.7.5'
	implementation "com.sparkjava:spark-core:2.9.3"

	//smtp
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'javax.mail:javax.mail-api:1.6.2'

}

tasks.named('test') {
	useJUnitPlatform()
}
